# query-engines-playground

./: Cargo.toml
benches/: engine_compare.rs
crates/jit-engine/: Cargo.toml
crates/jit-engine/src/: lib.rs  lowering.rs  runtime.rs
crates/jit-engine/src/codegen/: abi.rs  expr_codegen.rs  kernel_codegen.rs  mod.rs
crates/jit-engine/src/codegen/backend/: cranelift.rs  mod.rs
crates/jit-engine/src/codegen/semantics/: expr.rs  kernel.rs  looping.rs  mod.rs
crates/query-core/: Cargo.toml
crates/query-core/src/: data_frame.rs  data_source.rs  lib.rs
crates/query-core/src/logical_exprs/: binary.rs  literal.rs  mod.rs
crates/query-core/src/logical_plans/: filter.rs  mod.rs  projection.rs
crates/volcano-engine/: Cargo.toml
crates/volcano-engine/src/: lib.rs  planner.rs
crates/volcano-engine/src/physical_exprs/: aggregate.rs  binary.rs  column.rs  mod.rs
crates/volcano-engine/src/physical_plans/: filter.rs  hash_aggregate.rs  mod.rs  projection.rs  scan.rs
src/: data_frame.rs  data_source.rs  lib.rs  main.rs  optimizer.rs  planner.rs
src/logical_exprs/: aggregate.rs  column.rs  mod.rs
src/logical_plans/: aggregate.rs  filter.rs  mod.rs  projection.rs  scan.rs
src/physical_exprs/: aggregate.rs  binary.rs  column.rs  literal.rs  mod.rs
src/physical_plans/: filter.rs  hash_aggregate.rs  mod.rs  projection.rs  scan.rs
